2001-10-31 Alexander Rawass <alexannika@users.sourceforge.net>
	* happy halloween!
	* added ship_ambient and planet_ambient into the picture
	* of course I set them both to 0 :-)

2001-10-31 Alexander Rawass <alexannika@users.sourceforge.net>

	* modified doxygenConfig to show comments in source
	* modified TODO
	* added getVariable to Mission
	* modified Universe to have Init(string filename)
	* modified main.cpp to load the system that's defined
	  as 'system' in the mission file
	* removed data/test.xml
	* added data/sol.system (former test.xml)
	* added error msg to star_system_xml if system file not found
	* added used variables to vegastrike.config

	
2001-10-27 Daniel Horn <hellcatv@hotmail.com>
2001-10-28 Daniel Horn <hellcatv@hotmail.com>
2001-10-29 Daniel Horn <hellcatv@hotmail.com>

	* ported to windows (sound et all)
	* added Direct3DSound support for windoze hardware acceleration
	* added doppler effect (off by default) to config & aldrv lib
	* modified aldrv to use a limited number of sources
	* fixed sound "stealing" so that it respected the limited sources
	* changed weapons to play with looping sounds to eliminate static
	* modified weapon sounds to 'steal' properly so human gets to hear his sounds
	* modified camera to have 1/2 frame lagtime in figuring out which ships to clip
	* modified music to respect limited number of sources.
	* modified music to respect doppler effect & position
	* modified music to allow <4 length playlists
	* modified Units to have a configurable ModelDetail value (higher means that higher (better) LODs are used for far starships
	* added factions to mission parsing (_Universe->GetFaction(int i)) hehe


2001-10-27 Alexander Rawass <alexannika@users.sourceforge.net>

	* added section printout when warning for variables
	* modified main_loop to use nr_ships
	* modified Unit constructor to take a Flightgroup argument
	
	
2001-10-25 Alexander Rawass <alexannika@users.sourceforge.net>
	